sorted/tests/04-variants-with-data.stderr
error: Dyn should sort before Fmt
  --> tests/04-variants-with-data.rs:19:5
   |
13 | #[sorted]
   | --------- in this procedural macro expansion
...
19 |     Dyn(Box<dyn StdError>),
   |     ^^^
   |
   = note: this error originates in the attribute macro `sorted` (in Nightly builds, run with -Z macro-backtrace for more info)
